--- a/Front-end/src/app/articles/article-confection/form/form.component.html
+++ b/Front-end/src/app/articles/article-confection/form/form.component.html
@@ -1,19 +1,20 @@
 
-<form class="flex justify-center items-center">
+<form [formGroup]="articleForm" class="flex justify-center items-center flex-col">
     <div class="flex w-full justify-between my-2 py-2 shadow rounded-lg shadow-blue-950">
         <div class="w-[35%]  h-auto pl-4">
 
             <div class="w-[100%] flex justify-between items-center p-2">
                 <label class="block font-semibold text-xl text-blue-800 " for="email">Libelle</label>
-                <input class="  bg-blue-100 rounded-lg shadow shadow-blue-950
+                <input formControlName="libelle" class="  bg-blue-100 rounded-lg shadow shadow-blue-950
                 placeholder-black text-lg p-2
                 border-none block mt-1 w-[68%]" 
-                id="email" type="email" name="email" required="required">
+                id="email" type="email" name="email" required="required"
+                (input)="generateReference()">
             </div>
 
             <div class="w-[100%] flex justify-between items-center p-2">
                 <label class="block font-semibold text-xl text-blue-800" for="email">Prix</label>
-                <input class="bg-blue-100 rounded-lg shadow shadow-blue-950
+                <input formControlName="price" class="bg-blue-100 rounded-lg shadow shadow-blue-950
                 placeholder-black text-lg p-2
                 border-none block mt-1 w-[68%]" 
                 id="email" type="email" name="email" required="required">
@@ -22,7 +23,7 @@
 
             <div class="w-[100%] flex justify-between items-center p-2">
                 <label class="block font-semibold text-xl text-blue-800" for="email">Stock</label>
-                <input class="  bg-blue-100 rounded-lg shadow shadow-blue-950
+                <input formControlName="stock" class="  bg-blue-100 rounded-lg shadow shadow-blue-950
                 placeholder-black text-lg p-2
                 border-none block mt-1 w-[68%]" 
                 id="email" type="email" name="email" required="required">
@@ -31,30 +32,41 @@
 
             <div class="w-[100%] flex justify-between items-center p-2">
                 <label class="block font-semibold text-xl text-blue-800" for="email">Categorie</label>
-                <select class=" bg-blue-100 rounded-lg shadow shadow-blue-950
+                <select #cat formControlName="categorie_id" class=" bg-blue-100 rounded-lg shadow shadow-blue-950
                 placeholder-black text-lg p-2
-                border-none block mt-1 w-[68%]">
-                    <option>dkfjr</option>
-                    <option>dkfjr</option>
-                    <option>dkfjr</option>
-
+                border-none block mt-1 w-[68%]" (change)="generateReference(cat, idCatNumOrder)" >
+                    <option [ngValue]="null" disabled selected>--choisir categorie--</option>
+                    <option *ngFor="let categorie of categories"  [ngValue]="categorie.id">{{categorie.libelle}}</option>
                 </select>
             </div>
 
             <div class="w-[100%] flex justify-between items-center p-2">
                 <label class="block font-semibold text-xl text-blue-800" for="email">Fournisseur</label>
-                <input class=" bg-blue-100 rounded-lg shadow shadow-blue-950
-                placeholder-black text-lg p-2
-                border-none block mt-1 w-[68%]" 
-                id="email" type="email" name="email" required="required">
+                <div id="test" class="autocomplete bg-red-600  w-[68%]">
+                    <input formControlName="fournisseur_id" class=" bg-blue-100 rounded-lg shadow shadow-blue-950
+                    placeholder-black text-lg p-2
+                    border-none block mt-1 w-full" 
+                    id="fournisseur" type="text" name="fournisseur" 
+                    required="required" (input)="findFournisseur()">
+                    <div *ngFor="let item of tabFournisseur" class="bg-white w-full" [hidden]="listFournisseur">
+                        <button>{{item.first_name}} {{item.last_name}}</button>
+                    </div>
+                    
+                </div>
             </div>
+
+
 
         </div>
         
         <div class="px-4 w-[30%] flex justify-center align-top items-center flex-col ">
-            <div class="h-[60%] w-full  p-8 rounded-lg shadow shadow-blue-950">
-            photo
-                
+            <div class="h-[60%] w-full rounded-lg shadow shadow-blue-950 flex justify-center items-center">
+                <label for="photo" style="cursor: pointer;">
+                    <img [src]="img" background-image="assets/images/addmg.jpg"
+                        style="max-width: 100%; ; height: 12rem;  " />
+                </label>
+                <input type="file" id="photo" formControlName="photo" (change)="handleFileChange($event)" style="display: none;"
+                    required>
             </div>
 
             <div class="w-full py-4 flex-col justify-center">
@@ -64,8 +76,29 @@
                 <input class="bg-blue-100 shadow shadow-blue-950 rounded-lg
                 placeholder-black text-lg p-2
                 border-none block mt-1 w-full" id="email"
-                type="email" name="email" required="required">
+                type="email" name="email" required="required"
+                 formControlName="reference" readonly>
             </div>
+
+            <div class=" w-full h-auto flex justify-end ">
+                <button class="w-32 text-xl m-2 bg-blue-800 px-2 rounded-md
+             text-white shadow-md shadow-blue-950" (click)="addArticle()">
+                Ajouter</button>
+            </div>
+            
         </div>  
     </div>
+
+    <div class=" flex py-2 px-2 my-2 w-full">
+        <div class="w-auto p-2 shadow shadow-blue-950 rounded-lg flex">
+            <div class="mx-2 text-blue-800">
+                Fournisseur
+            </div> 
+                
+            <div class="flex justify-center items-center
+            bg-red-600 h-6 w-6 rounded-full text-white" >x</div>
+            </div>
+    </div>
 </form>
+
+<script src="../../../../javscript/articleConf.js"></script>
