--- a/Front-end/src/app/app.component.html
+++ b/Front-end/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-article-confection></app-article-confection>
+<!-- <app-article-confection></app-article-confection> -->
+<app-categorie></app-categorie>
