--- a/Front-end/src/app/articles/article-confection/list/list.component.html
+++ b/Front-end/src/app/articles/article-confection/list/list.component.html
@@ -29,7 +29,7 @@
                         </div>
                         <div class="relative">
                             <select
-                                class="appearance-none h-full rounded-r border-t sm:rounded-r-none 
+                                class=" h-full rounded-r border-t sm:rounded-r-none 
                                 sm:border-r-0 border-r border-b block appearance-none 
                                 w-full bg-white border-blue-950 text-blue-800 py-2 
                                 px-4 pr-8 leading-tight focus:outline-none focus:border-l 
