Ajout et list categorie avec Interface

--- a/Front-end/src/app/articles/article-confection/list/list.component.html
+++ b/Front-end/src/app/articles/article-confection/list/list.component.html
@@ -12,7 +12,7 @@
                     <div class="flex flex-row mb-1 sm:mb-0">
                         <div class="relative">
                             <select
-                                class="appearance-none h-full rounded-l border 
+                                class=" h-full rounded-l border 
                                 block appearance-none w-full bg-white border-blue-950
                                 text-blue-800 py-2 px-4 pr-8 leading-tight 
                                 ocus:outline-none focus:bg-white focus:border-blue-500">
