--- a/Front-end/src/app/categories/categorie/categorie.component.html
+++ b/Front-end/src/app/categories/categorie/categorie.component.html
@@ -62,55 +62,17 @@
                             <div class="p-2">
                                 <h2 class="text-2xl font-bold leading-tight text-blue-800">Liste categories</h2>
                             </div>
-                            <div class="my-2 flex sm:flex-row flex-col">
-                                <div class="flex flex-row mb-1 sm:mb-0">
-                                    <div class="relative">
-                                        <select
-                                            class=" h-full rounded-l border 
-                                            block appearance-none w-full bg-white border-blue-950
-                                            text-blue-800 py-2 px-4 pr-8 leading-tight 
-                                            ocus:outline-none focus:bg-white focus:border-blue-500">
-                                            <option>5</option>
-                                            <option>10</option>
-                                            <option>20</option>
-                                        </select>
-                                        <div
-                                            class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-blue-700">
-                                            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                                                <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
-                                            </svg>
-                                        </div>
-                                    </div>
-                                    <div class="relative">
-                                        <select
-                                            class=" h-full rounded-r border-t sm:rounded-r-none 
-                                            sm:border-r-0 border-r border-b block appearance-none 
-                                            w-full bg-white border-blue-950 text-blue-800 py-2 
-                                            px-4 pr-8 leading-tight focus:outline-none focus:border-l 
-                                            focus:border-r focus:bg-white focus:border-blue-500">
-                                            <option>All</option>
-                                            <option>Active</option>
-                                            <option>Inactive</option>
-                                        </select>
-                                        <div
-                                            class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-blue-700">
-                                            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                                                <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
-                                            </svg>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="block relative">
-                                    <span class="h-full absolute inset-y-0 left-0 flex items-center pl-2">
-                                        <svg viewBox="0 0 24 24" class="h-4 w-4 fill-current text-blue-800">
-                                            <path
-                                                d="M10 4a6 6 0 100 12 6 6 0 000-12zm-8 6a8 8 0 1114.32 4.906l5.387 5.387a1 1 0 01-1.414 1.414l-5.387-5.387A8 8 0 012 10z">
-                                            </path>
+                            <div class="mt-4 shadow-sm shadow-blue-950 w-[20%] rounded-lg bg-slate-100 flex justify-between">
+                                
+                                    <div class="pl-2 rounded-l-lg flex justify-center items-center">
+                                        <svg class="w-4 h-4 text-blue-950 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
                                         </svg>
-                                    </span>
-                                    <input placeholder="Search"
-                                        class="appearance-none rounded-r rounded-l sm:rounded-l-none border border-blue-950 border-b block pl-8 pr-6 py-2 w-full bg-white text-sm placeholder-blue-800 text-blue-800 focus:bg-white focus:placeholder-blue-800 focus:text-blue-700 focus:outline-none" />
-                                </div>
+                                    </div>
+                                    <div>
+                                        <input class="rounded-r-lg text-blue-800" type="text" placeholder="Search" [(ngModel)]="typedValue" (ngModelChange)="search()">
+                                    </div>
+                                
                             </div>
             
 
@@ -132,7 +94,7 @@
                                             <!-- <th class="w-[38%]">Action</th> -->
                                         </thead>
 
-                                       <tbody class="pt-2" *ngFor="let item of listCat" >
+                                       <tbody class=" pt-2" *ngFor="let item of listCat | paginate : {itemsPerPage:nbrPage,currentPage:numPage};" >
                                             <tr class="w-full"> 
                                                 <td class="  w-20  flex justify-between items-center px-2 border-r-2">
                                                     <div class="h-full mt-2 px-4 py-3   w-full flex justify-center">
@@ -173,9 +135,22 @@
                                             </tr>
                                        </tbody>
 
-                                   
+                                       
+                                        <tfoot class="w-[100%]">
+                                            <tr>
+                                                <td>&nbsp;</td>
+                                                <td>
+                                                    <div class="pt-2 text-blue-800 w-full flex justify-center">
+                                                        <pagination-controls (pageChange)="numPage = $event"></pagination-controls>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </tfoot>
+                                       
+
+                                       
                                         
-                                </table>
+                                    </table>
                                 </div>
                             </div>
                         </div>
