Delete categorie , active et desactive button

--- a/Front-end/src/app/categories/categorie/categorie.component.html
+++ b/Front-end/src/app/categories/categorie/categorie.component.html
@@ -36,11 +36,12 @@
                             <input formControlName="categorie" class="  bg-blue-100 rounded-lg shadow shadow-blue-950
                             placeholder-black text-lg p-2
                             border-none block mt-1 w-full" 
-                        id="cat" type="text" name="categorie" required="required" > 
+                        id="cat" type="text" name="categorie" required="required" 
+                        (input)="onTypeEnableButton()"> 
                         </div>
                         
                         <div class="min-w-min">
-                            <button [disabled]="disableAddOrEditbutton" (click)="ok()" [class]="bgButton" class="w-32  min p-2 h-10 text-xl rounded-md
+                            <button [disabled]="disableAddOrEditbutton" (click)="addOrEditCategorie()" [class]="bgButton" class="w-32  min p-2 h-10 text-xl rounded-md
                             text-white shadow-md  shadow-blue-950" >
                             {{buttonAddOrEdit}}</button>
                         </div>
@@ -71,7 +72,8 @@
                                     </div>
 
                                     <div class="min-w-min">
-                                        <button  [hidden]="hideElement"  class="w-auto p-1 mt-2 mr-2  h-auto text-xl  bg-red-600  rounded-md
+                                        <button (click)="deleteCategorie()" [disabled]="disableDeleteButton"
+                                        [hidden]="hideElement"  class="w-auto p-1 mt-2 mr-2  h-auto text-xl  bg-red-600  rounded-md
                                             text-white shadow-md shadow-blue-950" >
                                             <svg class="w-5 h-5 text-white dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
                                                 <path d="M17 4h-4V2a2 2 0 0 0-2-2H7a2 2 0 0 0-2 2v2H1a1 1 0 0 0 0 2h1v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6h1a1 1 0 1 0 0-2ZM7 2h4v2H7V2Zm1 14a1 1 0 1 1-2 0V8a1 1 0 0 1 2 0v8Zm4 0a1 1 0 0 1-2 0V8a1 1 0 0 1 2 0v8Z"/>
