--- a/Front-end/src/app/categories/categorie/categorie.component.html
+++ b/Front-end/src/app/categories/categorie/categorie.component.html
@@ -94,7 +94,7 @@
                                                 <input type="checkbox" [disabled]="disableWhenAdd" [(ngModel)]="checkAll" (change)="checkAllCheckBoxes()">
                                                 <span class="mr-5">All</span>
                                             </th>
-                                            <th class=" bg   w-[60%] max-w-auto">
+                                            <th class=" w-[60%] max-w-auto">
                                                 <!-- <div class="flex justify-start pl-4"> -->
                                                     <span>Libelle</span>
                                                 <!-- </div> -->
