article conf => search, chose and cancel fournisseur

--- a/Front-end/src/app/app.component.html
+++ b/Front-end/src/app/app.component.html
@@ -1,2 +1,2 @@
-<!-- <app-article-confection></app-article-confection> -->
-<app-categorie></app-categorie>
+<app-article-confection></app-article-confection>
+<!-- <app-categorie></app-categorie> -->
